--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "dev": "nodemon --exec babel-node --presets @babel/preset-env"
   },
   "author": "",
+  "type": "module",
   "license": "ISC",
   "dependencies": {
+    "bull": "^4.11.3",
     "chai-http": "^4.3.0",
     "express": "^4.18.2",
     "kue": "^0.11.6",
     "mongodb": "^6.0.0",
-    "redis": "^4.6.8"
+    "redis": "^4.6.8",
+    "sha1": "^1.1.1",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.10",
